--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
