--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@mendable/firecrawl-js": "^1.24.0",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "firecrawl": "^1.24.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "^15.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
